2017-01-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
        * python/configManager.py
        * python/sample.py
        * python/systematic.py
        * scripts/HistFitter.py
        - removing the Reset function in scripts/HistFitter.py to enable support for more recent Root versions
        - adding the possibility to give a prefix to a treename for samples to allow for having the sample name and tree prefix name different and being propagated to nominal trees and systematic trees


2017-01-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/prepareHistos.py: improve the histograms-not-found error to
	reflect the incorrect binning in the output if that is the issue why the
	histogram cannot be read properly

2016-08-28 Luigi Longo <luigi.longo@cern.ch>
	* src/Utils.cxx: added method to display fit results one time GenerateFitAndPlot
	is called
	* src/Utils.h

2016-08-25 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: fix p0exp - bug introduced by misleading comment.
	Comment changed. See HISTFITTER-29. Also fixed -2sigma and -1sigma values.
	* python/prepareHistos.py: fix error in throwing exception

2016-07-26 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/UpperLimitTable.py: don't exit if -a and nToys given at the same
	time

2016-07-21 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: remove two stray lines introduced in the previous change
	
2016-07-20 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* scripts/HistFitter.py: forbid simultaneous use of -p and -z options as
	the combination can lead to changing CLs values for the -p option (also
	reported as HISTFITTER-25)

2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/sample.py: replaceSystematic() function (HISTFITTER-21)

2016-07-12 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* python/histfitter/plotting/systematicsplotter.py: check file existence;
	put sample name in canvas title
