@@ -1,3 +1,9 @@
+2017-02-13 Jan Kuechler (Sophio Pataraia <sophio.pataraia@cern.ch>)
+        * scripts/SystRankingPlot.py
+        * scripts/README_TABLESCRIPTS
+        + added script from Jan to produce plot showing the impact of 
+        the nuisance parameters on the fitted POI value (mu_SIGNAL).  
+
 2017-01-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch
         * python/configManager.py
         * python/sample.py
